# beu-ros-interfaces

./: CMakeLists.txt  README.md  package.xml
msg/: BoundedFrame.msg  BoundingBox.msg  TrackerResult.msg
srv/: InitTracker.srv
