<?xml version="1.0"?>
<package>
  <name>stalker_ros_msgs</name>
  <version>0.0.0</version>
  <description>msgs customize for stalker-ros package.</description>
  <maintainer email="alumx@todo.todo">alumx</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>